# MatAnyone2

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-03-26-matanyone2-internal-web-app-plan.md  2026-03-27-matanyone2-internal-webapp-ui-redesign-plan.md  2026-03-28-matanyone2-standalone-desktop-workbench-plan.md  2026-03-28-matanyone2-standalone-desktop-workbench-state-feedback-plan.md
docs/superpowers/specs/: 2026-03-26-matanyone2-internal-web-app-design.md  2026-03-27-matanyone2-internal-webapp-ui-redesign-design.md  2026-03-28-matanyone2-standalone-desktop-workbench-design.md  2026-03-28-matanyone2-standalone-desktop-workbench-state-feedback-design.md
evaluation/: eval_lr.py
matanyone2/: __init__.py  cli.py
matanyone2/desktop_app/: __init__.py  app.py  config.py  jobs.py  main_window.py  media.py  session_controller.py  widgets.py
matanyone2/utils/: device.py  download_util.py  get_default_model.py  inference_utils.py
matanyone2/webapp/: __init__.py  config.py  db.py  models.py  queue.py  repository.py  runtime_paths.py  smoke.py  worker.py
matanyone2/webapp/api/: __init__.py  app.py  dependencies.py
matanyone2/webapp/api/routes/: __init__.py  annotation.py  jobs.py  pages.py  uploads.py
matanyone2/webapp/services/: __init__.py  export.py  inference.py  masking.py  video.py
matanyone2/webapp/static/: annotator.js  results.js  shared.js  styles.css  upload.js  workbench.js  workspace.js
matanyone2/webapp/templates/: annotate.html  base.html  job.html  upload.html  workspace.html
scripts/: _path_bootstrap.py  check_internal_webapp.ps1  internal_webapp_common.ps1  run_desktop_workbench.py  run_internal_webapp.py  run_internal_worker.py  smoke_desktop_workbench.py  smoke_internal_webapp.ps1  smoke_internal_webapp.py  start_desktop_workbench.ps1  start_internal_webapp.ps1  stop_internal_webapp.ps1
tests/: test_inference_utils.py
tests/desktop_app/: conftest.py  test_app_config.py  test_main_window.py  test_review_step.py  test_session_controller.py
tests/webapp/: conftest.py  test_api_flow.py  test_app_factory.py  test_config.py  test_export_service.py  test_inference_service.py  test_masking_service.py  test_page_templates.py  test_repository.py  test_service_scripts.py  test_smoke.py  test_video_service.py  test_worker.py
