[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.yapf]
based_on_style = "pep8"
indent_width = 4
column_limit = 100

[project]
name = "matanyone2"
version = "1.0.0"
authors = [{ name = "Peiqing Yang", email = "peiqingyang99@outlook.com" }]
description = "Scaling Video Matting via a Learned Quality Evaluator"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = [
  'cython',
  'gitpython >= 3.1',
  'thinplate@git+https://github.com/cheind/py-thin-plate-spline',
  'hickle >= 5.0',
  'tensorboard >= 2.11',
  'numpy >= 1.21',
  'Pillow >= 9.5',
  'opencv-python >= 4.8',
  'scipy >= 1.7',
  'pycocotools >= 2.0.7',
  'tqdm >= 4.66.1',
  'gradio >= 3.34',
  'gdown >= 4.7.1',
  'einops >= 0.6',
  'hydra-core >= 1.3.2',
  'PySide6 >= 6.2.0',
  'charset-normalizer >= 3.1.0',
  'netifaces >= 0.11.0',
  # 'cchardet >= 2.1.7',
  'easydict',
  'av >= 0.5.2',
  'requests',
  'pyqtdarktheme',
  'imageio == 2.25.0',
  'imageio[ffmpeg]',
  'huggingface_hub[hf_xet] == 1.7.1',
  'safetensors',
  'xlsxwriter',
  'kornia',
]

[project.scripts]
matanyone2 = "matanyone2.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["matanyone2"]

[tool.hatch.build.targets.wheel.force-include]
"matanyone2/config" = "matanyone2/config"

[tool.hatch.build.targets.sdist]
include = [
  "matanyone2/",
  "inference_matanyone2.py",
  "README.md",
  "LICENSE.txt",
]

[tool.uv]
no-build-isolation-package = ["thinplate"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[project.urls]
"Homepage" = "https://github.com/pq-yang/MatAnyone2"
"Bug Tracker" = "https://github.com/pq-yang/MatAnyone2/issues"

[tool.setuptools]
package-dir = {"" = "."}
