[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.yapf]
based_on_style = "pep8"
indent_width = 4
column_limit = 100

[project]
name = "matanyone2"
version = "1.0.0"
authors = [{ name = "Peiqing Yang", email = "peiqingyang99@outlook.com" }]
description = ""
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = [
  'cython',
  'gitpython >= 3.1',
  'thinplate@git+https://github.com/cheind/py-thin-plate-spline',
  'SAM-2 @ git+https://github.com/facebookresearch/sam2.git',
  'segment-anything @ git+https://github.com/facebookresearch/segment-anything.git',
  'hickle >= 5.0',
  'tensorboard >= 2.11',
  'numpy >= 1.21',
  'matplotlib >= 3.8',
  'Pillow >= 9.5',
  'opencv-python >= 4.8',
  'scipy >= 1.7',
  'pycocotools >= 2.0.7',
  'tqdm >= 4.66.1',
  'fastapi >= 0.111, < 1.0',
  'uvicorn >= 0.30, < 1.0',
  'jinja2 >= 3.1, < 4.0',
  'python-multipart >= 0.0.9, < 1.0',
  'httpx >= 0.27, < 1.0',
  'decord >= 0.6',
  'pytest >= 8.0, < 9.0',
  'gdown >= 4.7.1',
  'einops >= 0.6',
  'hydra-core >= 1.3.2',
  'easydict',
  'av >= 0.5.2',
  'requests',
  'imageio == 2.25.0',
  'imageio[ffmpeg]',
  'huggingface_hub == 0.36.2',
  'safetensors',
  'xlsxwriter',
  'kornia',
]

[tool.hatch.build.targets.wheel]
packages = ["matanyone2"]

[project.urls]
"Homepage" = "https://github.com/pq-yang/MatAnyone2"
"Bug Tracker" = "https://github.com/pq-yang/MatAnyone2/issues"

[tool.setuptools]
package-dir = {"" = "."}
